change footer index.html

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         </div>
                     </div>
                     <div class="info-producto">
-                        <p><strong>PANTALONES JEANS</strong><br>LARGO: 102 ANCHO: 50<br>120 Bs</p>
-                        <a href="#">COMPRAR</a>
+                        <p><strong>JEANS BAGGY FIT</strong><br>LARGO: 102 ANCHO: 50<br>120 Bs</p>
+                        <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20los%20'JEANS%20BAGGY%20FIT'.%0A-LARGO:%20102.%0A-ANCHO:%2050.%0A-120%20bs." target="_blank">COMPRAR</a>
                     </div>
                 </div>
 
@@ -79,8 +79,8 @@
                         </div>
                     </div>
                     <div class="info-producto">
-                        <p><strong>REMERA DE VERENO</strong><br>LARGO: 60 ANCHO 49<br>250 Bs</p>
-                        <a href="#">COMPRAR</a>
+                        <p><strong>REMERA COMBINADO TEXTOS</strong><br>LARGO: 60 ANCHO 49<br>250 Bs</p>
+                        <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20las%20'REMERA%20COMBINADO%20TEXTOS'.%0A-LARGO:%2060.%0A-ANCHO:%2049.%0A-250%20bs." target="_blank">COMPRAR</a>
                     </div>
                 </div>
 
@@ -95,8 +95,8 @@
                         </div>
                     </div>
                     <div class="info-producto">
-                        <p><strong>CAMISA CASUAL</strong><br>LARGO: 63 ANCHO 45<br>150 Bs</p>
-                        <a href="#">COMPRAR</a>
+                        <p><strong>SOBRECAMISA ESTRUCTURA BORDADO</strong><br>LARGO: 63 ANCHO 45<br>150 Bs</p>
+                        <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'SOBRECAMISA%20ESTRUCTURA%20BORDADO'.%0A-LARGO:%2063.%0A-ANCHO:%2045.%0A-150%20bs." target="_blank">COMPRAR</a>
                     </div>
                 </div>
 
@@ -113,7 +113,7 @@
                     </div>
                     <div class="info-producto">
                         <p><strong>CAZADORA PIEL BOBBY</strong><br>LARGO: 70 ANCHO 62<br>350 Bs</p>
-                        <a href="#">COMPRAR</a>
+                        <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'CAZADORA%20PIEL%20BOBBY'.%0A-LARGO:%2070.%0A-ANCHO:%2062.%0A-350%20bs." target="_blank">COMPRAR</a>
                     </div>
                 </div>
             </div>
