--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- footer -->
     <footer>
         <div>
-            <p>&copy; 2025 ReVibe. Todos los derechos reservados.</p>
+            <p>&copy; 2025 ReVibe<sup>™</sup>. Todos los derechos reservados.</p>
         </div>
         <div class="social-media">
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
