added front-end ´man.html, woman.html, accessories.html´

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- header -->
     <header>
         <div class="header-brand">
-            <a href="/index.html">
+            <a href="index.html">
                 <img src="brand.svg" alt="Brand Logo">
             </a>
         </div>
@@ -29,10 +29,10 @@
         <!-- navegation -->
         <nav class="nav-main">
             <ul class="nav-menu">
-                <li><a href="#">Hogar</a></li>
-                <li><a href="#">Hombres</a></li>
-                <li><a href="#">Mujeres</a></li>
-                <li><a href="#">Accesorios</a></li>
+                <li><a href="index.html">Hogar</a></li>
+                <li><a href="man.html">Hombres</a></li>
+                <li><a href="woman.html">Mujeres</a></li>
+                <li><a href="accessories.html">Accesorios</a></li>
                 <li><a href="#">Novedades</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
@@ -125,8 +125,8 @@
             <p>&copy; 2025 ReVibe<sup>™</sup>. Todos los derechos reservados.</p>
         </div>
         <div class="social-media">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://instagram.com/revibe" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://tiktok.com/revibe" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
         </div>
     </footer>
     <!-- js -->
