added new.html and removed contact

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                 <li><a href="man.html">Hombres</a></li>
                 <li><a href="woman.html">Mujeres</a></li>
                 <li><a href="accessories.html">Accesorios</a></li>
-                <li><a href="#">Novedades</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="news.html">Novedades</a></li>
             </ul>
         </nav>
    </header>
@@ -125,6 +124,7 @@
             <p>&copy; 2025 ReVibe<sup>™</sup>. Todos los derechos reservados.</p>
         </div>
         <div class="social-media">
+            <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Quisiera%20saber%20más%20sobre%20ReVibe%20Cochabamba.%20(https://revibe.bolivia.bo/)" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://instagram.com/revibe" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://tiktok.com/revibe" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
         </div>
