fix: scroll on image click

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <div class="producto">
                     <div class="imagenes">
                         <div class="imagen-principal">
-                            <img src="https://static.zara.net/assets/public/9a94/5ef4/d7754d05b92d/97726d9d076d/08062410407-e1/08062410407-e1.jpg?ts=1739376677575&w=1920" alt="Producto 1">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/9a94/5ef4/d7754d05b92d/97726d9d076d/08062410407-e1/08062410407-e1.jpg?ts=1739376677575&w=1920" alt="Producto 1">
                         </div>
                             <div class="imagenes-secundarias">
-                            <img src="https://static.zara.net/assets/public/8b4f/58b2/a84d40258a85/4904435f97cd/08062410407-e2/08062410407-e2.jpg?ts=1739376680669&w=1920" alt="">
-                            <img src="https://static.zara.net/assets/public/c20e/8694/afa9436085d7/2714d72c2017/08062410407-e3/08062410407-e3.jpg?ts=1739376681644&w=1920" alt="">
-                            <img src="https://static.zara.net/assets/public/0b04/ed01/a9fa4c5a8404/7715f60f8dc1/08062410407-e4/08062410407-e4.jpg?ts=1739376681072&w=1920" alt="">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/8b4f/58b2/a84d40258a85/4904435f97cd/08062410407-e2/08062410407-e2.jpg?ts=1739376680669&w=1920" alt="">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/c20e/8694/afa9436085d7/2714d72c2017/08062410407-e3/08062410407-e3.jpg?ts=1739376681644&w=1920" alt="">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/0b04/ed01/a9fa4c5a8404/7715f60f8dc1/08062410407-e4/08062410407-e4.jpg?ts=1739376681072&w=1920" alt="">
                         </div>
                     </div>
                     <div class="info-producto">
@@ -71,10 +71,10 @@
                 <div class="producto">
                     <div class="imagenes">
                         <div class="imagen-principal">
-                            <img src="https://static.zara.net/assets/public/3f7f/a3fe/59f44d7790d8/b5c83a07c0c6/06224330300-e1/06224330300-e1.jpg?ts=1753360048796&w=1920" alt="Producto 2">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/3f7f/a3fe/59f44d7790d8/b5c83a07c0c6/06224330300-e1/06224330300-e1.jpg?ts=1753360048796&w=1920" alt="Producto 2">
                         </div>
                         <div class="imagenes-secundarias">
-                            <img src="https://static.zara.net/assets/public/554e/7268/a7c048f1ba8f/f4bb57798c2d/06224330300-e2/06224330300-e2.jpg?ts=1753360048782&w=1920" alt="">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/554e/7268/a7c048f1ba8f/f4bb57798c2d/06224330300-e2/06224330300-e2.jpg?ts=1753360048782&w=1920" alt="">
                         </div>
                     </div>
                     <div class="info-producto">
@@ -87,10 +87,10 @@
                 <div class="producto">
                     <div class="imagenes">
                         <div class="imagen-principal">
-                            <img src="https://static.zara.net/assets/public/2dea/0624/7c51440db7f6/6dedd85c528a/00399310500-e1/00399310500-e1.jpg?ts=1752492565237&w=1920" alt="Producto 3">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/2dea/0624/7c51440db7f6/6dedd85c528a/00399310500-e1/00399310500-e1.jpg?ts=1752492565237&w=1920" alt="Producto 3">
                         </div>
                         <div class="imagenes-secundarias">
-                            <img src="https://static.zara.net/assets/public/657e/3d54/7d7b4bbd9f27/26e239238993/00399310500-e2/00399310500-e2.jpg?ts=1752492565893&w=1920" alt="">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/657e/3d54/7d7b4bbd9f27/26e239238993/00399310500-e2/00399310500-e2.jpg?ts=1752492565893&w=1920" alt="">
                         </div>
                     </div>
                     <div class="info-producto">
@@ -103,11 +103,11 @@
                 <div class="producto">
                     <div class="imagenes">
                         <div class="imagen-principal">
-                            <img src="https://static.zara.net/assets/public/0b13/db56/ac4d4a2fabce/390931af291b/05388410800-e1/05388410800-e1.jpg?ts=1747994514568&w=1920" alt="Producto 4">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/0b13/db56/ac4d4a2fabce/390931af291b/05388410800-e1/05388410800-e1.jpg?ts=1747994514568&w=1920" alt="Producto 4">
                         </div>
                         <div class="imagenes-secundarias">
-                            <img src="https://static.zara.net/assets/public/6134/3194/531148eba62f/6150b7337bb4/05388410800-e2/05388410800-e2.jpg?ts=1747994514160&w=1920" alt="">
-                            <img src="https://static.zara.net/assets/public/aa8e/11b5/f7d1407a9b22/6985d3a05c56/05388410800-e3/05388410800-e3.jpg?ts=1747994514539&w=1920" alt="">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/6134/3194/531148eba62f/6150b7337bb4/05388410800-e2/05388410800-e2.jpg?ts=1747994514160&w=1920" alt="">
+                            <img class="zoomable" src="https://static.zara.net/assets/public/aa8e/11b5/f7d1407a9b22/6985d3a05c56/05388410800-e3/05388410800-e3.jpg?ts=1747994514539&w=1920" alt="">
                         </div>
                     </div>
                     <div class="info-producto">
@@ -117,6 +117,10 @@
                 </div>
             </div>
         </section>
+        <!-- Contenedor para ampliar imagen -->
+        <div id="overlay" class="overlay">
+        <img id="overlay-img" src="">
+        </div>
     </main> 
     <!-- footer -->
     <footer>
