fix: search/filter products

--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="ReVibe, ropa vintage, ropa y2k, moda retro, nuevos lotes, ropa de segunda mano, ropa de segunda mano hombre, ropa de segunda mano mujer, ropa de segunda mano unisex, drop ropa, lotes ropa">
     <meta name="author" content="ReVibe">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>ReVine | Novedades</title>
+    <title>ReVibe | Novedades</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
