--- a/pages/accessories/index.html
+++ b/pages/accessories/index.html
@@ -6,20 +6,20 @@
     <meta name="description" content="ReVibe, aquí encontrarás toda la ropa que neceistas para mujeres/unisex.">
     <meta name="keywords" content="ReVibe, ropa vintage, ropa y2k, moda retro, tienda en linea, ropa de segunda mano, ropa americana, tienda online, cochabamba, Bolivia, ropa de moda, ropa de calidad, ropa unica, ropa exclusiva, para mujeres, mujer">
     <meta name="author" content="ReVibe">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Ropa | Mujeres</title>
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
+    <title>ReVibe | Accesorios</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/products.css">
+    <link rel="stylesheet" href="../../assets/css/styles.css">
+    <link rel="stylesheet" href="../../assets/css/products.css">
 </head>
 <body>
     <!-- header -->
     <header>
         <div class="header-brand">
-            <a href="index.html">
-                <img src="brand.svg" alt="Brand Logo">
+            <a href="../../">
+                <img src="../../brand.svg" alt="Brand Logo">
             </a>
         </div>
         <div class="button">
@@ -30,11 +30,11 @@
         <!-- navegation -->
         <nav class="nav-main">
             <ul class="nav-menu">
-                <li><a href="index.html">Hogar</a></li>
-                <li><a href="man.html">Hombres</a></li>
-                <li><a href="woman.html">Mujeres</a></li>
-                <li><a href="accessories.html">Accesorios</a></li>
-                <li><a href="news.html">Novedades</a></li>
+                <li><a href="../../">Hogar</a></li>
+                <li><a href="../man/">Hombres</a></li>
+                <li><a href="../woman/">Mujeres</a></li>
+                <li><a href="../accessories/">Accesorios</a></li>
+                <li><a href="../news/">Novedades</a></li>
             </ul>
         </nav>
    </header>
@@ -52,55 +52,54 @@
                 <label for="categoria">FILTRAR POR CATEGORÍA:</label>
                 <select id="categoria">
                 <option value="">NINGUNA</option>
-                <option value="remeras">REMERAS</option>
-                <option value="pantalones">PANTALONES/FALDAS</option>
-                <option value="chaquetas">CHAQUETAS</option>
-                <option value="bermudas">BERMUDAS</option>
+                <option value="joyas">JOYAS</option>
+                <option value="prendas">PRENDAS</option>
+                <option value="gorras">GORRAS</option>
                 </select>
             </div>
         </div>
 
         <!-- Productos -->
         <section class="container-products">
-            <div class="product" data-categoria="pantalones">
+            <div class="product" data-categoria="joyas">
                 <div class="images-container">
                     <!-- Imagen principal -->
                     <div class="img-product">
                         <img class="zoomable" 
-                            src="https://static.zara.net/assets/public/8b73/076d/08fd40e2bc2e/fc43704b8421/08228227427-e1/08228227427-e1.jpg?ts=1753375396396&w=1920" 
+                            src="https://static.zara.net/assets/public/68ec/8180/2c904a94a32b/01993664aeb4/04736245303-e1/04736245303-e1.jpg?ts=1753262493403&w=1920" 
                             alt="Producto 1">
                     </div>
                     <!-- Imágenes secundarias -->
                     <div class="img-product-2">
-                        <img class="zoomable" src="https://static.zara.net/assets/public/6e04/2200/422f459e96c4/e477cddf278c/08228227427-e2/08228227427-e2.jpg?ts=1753375397360&w=1920" alt="">
-                        <img class="zoomable" src="https://static.zara.net/assets/public/7901/e97c/15db4c409804/f872752bb358/08228227427-e3/08228227427-e3.jpg?ts=1753375396795&w=1920" alt="">
+                        <img class="zoomable" src="https://static.zara.net/assets/public/9054/6ee8/e4d24d2f8a72/9a510d48c2aa/04736245303-e2/04736245303-e2.jpg?ts=1753262493965&w=1920" alt="">
                     </div>
                 </div>
                 <!-- Info -->
                 <div class="info-product">
-                    <p><strong>FALDA PANTALÓN Z1975 DENIM CRUZADO BOTONES</strong><br>LARGO: 52 ANCHO: 50<br>150 Bs</p>
-                    <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'FALDA%20PANTALÓN%20Z1975%20DENIM%20CRUZADO%20BOTONES'.%0A-150%20Bs." target="_blank">COMPRAR</a>
+                    <p><strong>PACK 2 COLLARES PALMERA FLORES RESINA</strong><br>80 Bs</p>
+                    <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20el%20'PACK%202%20COLLARES%20PALMERA%20FLORES%20RESINA'.%0A-80%20Bs." target="_blank">COMPRAR</a>
                 </div>
             </div>
 
-            <div class="product" data-categoria="remeras">
+            <div class="product" data-categoria="gorras">
                 <div class="images-container">
                     <!-- Imagen principal -->
                     <div class="img-product">
                         <img class="zoomable" 
-                            src="https://static.zara.net/assets/public/4a03/708f/27fb4354980d/a5c35649494f/04387036250-e1/04387036250-e1.jpg?ts=1742222355574&w=1920" 
+                            src="https://static.zara.net/assets/public/0b88/94e0/d6b34cd09832/e45f27b6fee2/03920694725-e1/03920694725-e1.jpg?ts=1753359939386&w=1920" 
                             alt="Producto 2">
                     </div>
                     <!-- Imágenes secundarias -->
                     <div class="img-product-2">
-                        <img class="zoomable" src="https://static.zara.net/assets/public/985a/5142/c5774501a932/e4b49dd00ee5/04387036250-e2/04387036250-e2.jpg?ts=1742222355440&w=1920" alt="">
-                        <img class="zoomable" src="https://static.zara.net/assets/public/f754/f44c/ad374ace9c6b/5e72cbf4639a/04387036250-e3/04387036250-e3.jpg?ts=1742222355870&w=1920" alt="">
+                        <img class="zoomable" src="https://static.zara.net/assets/public/0cd5/bb01/2ed34e51a31c/279ddd71ffd3/03920694725-e2/03920694725-e2.jpg?ts=1753359939415&w=1920" alt="">
+                        <img class="zoomable" src="https://static.zara.net/assets/public/ff3a/5388/690d45bc905f/ea9881d8cffb/03920694725-e3/03920694725-e3.jpg?ts=1753359939755&w=1920" alt="">
+                        <img class="zoomable" src="https://static.zara.net/assets/public/b2be/dc35/b467459d816e/986b054bc0e2/03920694725-e4/03920694725-e4.jpg?ts=1753359941707&w=1920" alt="">
                     </div>
                 </div>
                 <!-- Info -->
                 <div class="info-product">
-                    <p><strong>CAMISA BÁSICA POPELÍN</strong><br>LARGO: 60 ANCHO 49<br>250 Bs</p>
-                    <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'CAMISA%20BÁSICA%20POPELÍN'.%0A-250%20Bs." target="_blank">COMPRAR</a>
+                    <p><strong>GORRA VISOR PLANO BORDADO</strong><br>70 Bs</p>
+                    <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'GORRA%20VISOR%20PLANO%20BORDADO'.%0A-70%20Bs." target="_blank">COMPRAR</a>
                 </div>
             </div>
         </section>
@@ -122,7 +121,7 @@
         </div>
     </footer>
     <!-- js -->
-    <script src="js/app.js"></script>
-    <script src="js/products.js"></script>
+    <script src="../../assets/js/app.js"></script>
+    <script src="../../assets/js/products.js"></script>
 </body>
 </html>
