--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="keywords" content="ReVibe, ropa vintage, ropa y2k, moda retro, tienda en linea, ropa de segunda mano, ropa americana, tienda online, cochabamba, Bolivia, ropa de moda, ropa de calidad, ropa unica, ropa exclusiva">
     <meta name="author" content="ReVibe">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>ReVibe | Hogar</title>
+    <title>ReVibe - Hogar</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
     <!-- header -->
     <header>
         <div class="header-brand">
-            <a href="index.html">
+            <a href="/">
                 <img src="brand.svg" alt="Brand Logo">
             </a>
         </div>
@@ -29,11 +29,11 @@
         <!-- navegation -->
         <nav class="nav-main">
             <ul class="nav-menu">
-                <li><a href="index.html">Hogar</a></li>
-                <li><a href="man.html">Hombres</a></li>
-                <li><a href="woman.html">Mujeres</a></li>
-                <li><a href="accessories.html">Accesorios</a></li>
-                <li><a href="news.html">Novedades</a></li>
+                <li><a href="/">Hogar</a></li>
+                <li><a href="/pages/man/">Hombres</a></li>
+                <li><a href="/pages/woman/">Mujeres</a></li>
+                <li><a href="/pages/accessories/">Accesorios</a></li>
+                <li><a href="/pages/news/">Novedades</a></li>
             </ul>
         </nav>
    </header>
@@ -134,6 +134,6 @@
         </div>
     </footer>
     <!-- js -->
-    <script src="js/app.js"></script>
+    <script src="/assets/js/app.js"></script>
 </body>
 </html>
