--- a/pages/man/index.html
+++ b/pages/man/index.html
@@ -6,20 +6,20 @@
     <meta name="description" content="ReVibe, aquí encontrarás toda la ropa que neceistas para hombre/unisex.">
     <meta name="keywords" content="ReVibe, ropa vintage, ropa y2k, moda retro, tienda en linea, ropa de segunda mano, ropa americana, tienda online, cochabamba, Bolivia, ropa de moda, ropa de calidad, ropa unica, ropa exclusiva, para hombres, hombre">
     <meta name="author" content="ReVibe">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Ropa | Hombres</title>
+    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
+    <title>Ropa - Hombres</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/products.css">
+    <link rel="stylesheet" href="../../assets/css/styles.css">
+    <link rel="stylesheet" href="../../assets/css/products.css">
 </head>
 <body>
     <!-- header -->
     <header>
         <div class="header-brand">
-            <a href="index.html">
-                <img src="brand.svg" alt="Brand Logo">
+            <a href="../../">
+                <img src="../../brand.svg" alt="Brand Logo">
             </a>
         </div>
         <div class="button">
@@ -30,11 +30,11 @@
         <!-- navegation -->
         <nav class="nav-main">
             <ul class="nav-menu">
-                <li><a href="index.html">Hogar</a></li>
-                <li><a href="man.html">Hombres</a></li>
-                <li><a href="woman.html">Mujeres</a></li>
-                <li><a href="accessories.html">Accesorios</a></li>
-                <li><a href="news.html">Novedades</a></li>
+                <li><a href="../../">Hogar</a></li>
+                <li><a href="../man/">Hombres</a></li>
+                <li><a href="../woman/">Mujeres</a></li>
+                <li><a href="../accessories/">Accesorios</a></li>
+                <li><a href="../news/">Novedades</a></li>
             </ul>
         </nav>
    </header>
@@ -163,7 +163,7 @@
         </div>
     </footer>
     <!-- js -->
-    <script src="js/app.js"></script>
-    <script src="js/products.js"></script>
+    <script src="../../assets/js/app.js"></script>
+    <script src="../../assets/js/products.js"></script>
 </body>
 </html>
