--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="revibe/assets/css/styles.css">
 </head>
 <body>
     <!-- header -->
     <header>
         <div class="header-brand">
-            <a href="/">
+            <a href="revibe/">
                 <img src="brand.svg" alt="Brand Logo">
             </a>
         </div>
@@ -29,11 +29,11 @@
         <!-- navegation -->
         <nav class="nav-main">
             <ul class="nav-menu">
-                <li><a href="/">Hogar</a></li>
-                <li><a href="/pages/man/">Hombres</a></li>
-                <li><a href="/pages/woman/">Mujeres</a></li>
-                <li><a href="/pages/accessories/">Accesorios</a></li>
-                <li><a href="/pages/news/">Novedades</a></li>
+                <li><a href="revibe/">Hogar</a></li>
+                <li><a href="revibe/pages/man/">Hombres</a></li>
+                <li><a href="revibe/pages/woman/">Mujeres</a></li>
+                <li><a href="revibe/pages/accessories/">Accesorios</a></li>
+                <li><a href="revibe/pages/news/">Novedades</a></li>
             </ul>
         </nav>
    </header>
@@ -134,6 +134,6 @@
         </div>
     </footer>
     <!-- js -->
-    <script src="/assets/js/app.js"></script>
+    <script src="revibe/assets/js/app.js"></script>
 </body>
 </html>
