--- a/pages/man/index.html
+++ b/pages/man/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ReVibe, aquí encontrarás toda la ropa que neceistas para hombre/unisex.">
-    <meta name="keywords" content="ReVibe, ropa vintage, ropa y2k, moda retro, tienda en linea, ropa de segunda mano, ropa americana, tienda online, cochabamba, Bolivia, ropa de moda, ropa de calidad, ropa unica, ropa exclusiva, para hombres, hombre">
+    <meta name="description" content="Explora la colección de ropa de hombre en ReVibe. Pantalones, camisas, chaquetas y más estilo vintage y americano.">
+    <meta name="keywords" content="ropa de hombre, moda masculina, ropa americana hombre, ReVibe hombre">
     <meta name="author" content="ReVibe">
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
-    <title>Ropa - Hombres</title>
+    <title>Ropa de Hombre | ReVibe</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
