--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ReVibe es una tiene en linea dedicada a la venta de ropa vintage/y2k para hombres y mujeres.">
-    <meta name="keywords" content="ReVibe, ropa vintage, ropa y2k, moda retro, tienda en linea, ropa de segunda mano, ropa americana, tienda online, cochabamba, Bolivia, ropa de moda, ropa de calidad, ropa unica, ropa exclusiva">
+    <meta name="description" content="ReVibe: Ropa americana y vintage cuidadosamente seleccionada. Encuentra prendas únicas y de calidad en un solo lugar.">
+    <meta name="keywords" content="ropa americana, ropa vintage, ropa usada, tienda de ropa, ReVibe">
     <meta name="author" content="ReVibe">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>ReVibe - Hogar</title>
+    <title>ReVibe | Ropa Americana y Vintage</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
