--- a/pages/woman/index.html
+++ b/pages/woman/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ReVibe, aquí encontrarás toda la ropa que neceistas para mujeres/unisex.">
-    <meta name="keywords" content="ReVibe, ropa vintage, ropa y2k, moda retro, tienda en linea, ropa de segunda mano, ropa americana, tienda online, cochabamba, Bolivia, ropa de moda, ropa de calidad, ropa unica, ropa exclusiva, para mujeres, mujer">
+    <meta name="description" content="Ropa de mujer en ReVibe: vestidos, blusas, pantalones y accesorios con estilo americano y vintage.">
+    <meta name="keywords" content="ropa de mujer, moda femenina, ropa americana mujer, ReVibe mujer">
     <meta name="author" content="ReVibe">
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
-    <title>Ropa - Mujeres</title>
+    <title>Ropa de Mujer | ReVibe</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
