--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- gooogle -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2SCR1JG9TD"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-2SCR1JG9TD');
+    </script>
 </head>
 <body>
     <!-- header -->
