add: lote1, two products

--- a/pages/clothing/index.html
+++ b/pages/clothing/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ropa de mujer en ReVibe: vestidos, blusas, pantalones y accesorios con estilo americano y vintage.">
-    <meta name="keywords" content="ropa de mujer, moda femenina, ropa americana mujer, ReVibe mujer">
+    <meta name="description" content="Explora la colección de ropa de hombre y mujeres en ReVibe. Pantalones, camisas, chaquetas y más estilo vintage y americano.">
+    <meta name="keywords" content="ropa de hombre, moda masculina, ropa americana hombre, ReVibe hombre, ropa de mujer, moda femenina, ropa americana mujer, ReVibe mujer">
     <meta name="author" content="ReVibe">
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
-    <title>Ropa de Mujer | ReVibe</title>
+    <title>Ropa de Hombre | ReVibe</title>
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/db90717a15.js" crossorigin="anonymous"></script>
     <!-- css -->
@@ -39,8 +39,7 @@
         <nav class="nav-main">
             <ul class="nav-menu">
                 <li><a href="../../">Hogar</a></li>
-                <li><a href="../man/">Hombres</a></li>
-                <li><a href="../woman/">Mujeres</a></li>
+                <li><a href="../clothing/">Prendas</a></li>
                 <li><a href="../accessories/">Accesorios</a></li>
                 <li><a href="../news/">Novedades</a></li>
             </ul>
@@ -60,8 +59,8 @@
                 <label for="categoria">FILTRAR POR CATEGORÍA:</label>
                 <select id="categoria">
                 <option value="">NINGUNA</option>
-                <option value="remeras">REMERAS</option>
-                <option value="pantalones">PANTALONES/FALDAS</option>
+                <option value="remeras">POLERAS</option>
+                <option value="pantalones">PANTALONES</option>
                 <option value="chaquetas">CHAQUETAS</option>
                 <option value="bermudas">BERMUDAS</option>
                 </select>
@@ -70,24 +69,25 @@
 
         <!-- Productos -->
         <section class="container-products">
-            <div class="product" data-categoria="pantalones">
+            <div class="product" data-categoria="remeras">
                 <div class="images-container">
                     <!-- Imagen principal -->
                     <div class="img-product">
                         <img class="zoomable" 
-                            src="https://static.zara.net/assets/public/8b73/076d/08fd40e2bc2e/fc43704b8421/08228227427-e1/08228227427-e1.jpg?ts=1753375396396&w=1920" 
-                            alt="Producto 1">
+                            src="../../assets/img/products/drop1/1-1.webp   " 
+                            alt="img 1-1">
                     </div>
                     <!-- Imágenes secundarias -->
                     <div class="img-product-2">
-                        <img class="zoomable" src="https://static.zara.net/assets/public/6e04/2200/422f459e96c4/e477cddf278c/08228227427-e2/08228227427-e2.jpg?ts=1753375397360&w=1920" alt="">
-                        <img class="zoomable" src="https://static.zara.net/assets/public/7901/e97c/15db4c409804/f872752bb358/08228227427-e3/08228227427-e3.jpg?ts=1753375396795&w=1920" alt="">
+                        <img class="zoomable" src="../../assets/img/products/drop1/1-2.webp" alt="img 1-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/1-3.webp" alt="img 1-3">
+                        <img class="zoomable" src="../../assets/img/products/drop1/1-4.webp" alt="img 1-4">
                     </div>
                 </div>
                 <!-- Info -->
                 <div class="info-product">
-                    <p><strong>FALDA PANTALÓN Z1975 DENIM CRUZADO BOTONES</strong><br>LARGO: 52 ANCHO: 50<br>150 Bs</p>
-                    <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'FALDA%20PANTALÓN%20Z1975%20DENIM%20CRUZADO%20BOTONES'.%0A-150%20Bs." target="_blank">COMPRAR</a>
+                    <p><strong>Polera Vintage Moanalua - Port & Company</strong><br>TALLE: M<br>120 Bs</p>
+                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20comprar%20la%20%C2%B4*Polera%20Vintage%20Moanalua%20-%20Port%20%26%20Company*%C2%B4.%0A*Talle%3A%20M*%0A*Precio%3A%20120%20Bs*%0A*Imagen%3A%20https%3A%2F%2Fraw.githubusercontent.com%2Fleopilots%2Frevibe%2Frefs%2Fheads%2Fmain%2Fassets%2Fimg%2Fproducts%2Fdrop1%2F1-1.webp*" target="_blank">COMPRAR</a>
                 </div>
             </div>
 
@@ -96,19 +96,19 @@
                     <!-- Imagen principal -->
                     <div class="img-product">
                         <img class="zoomable" 
-                            src="https://static.zara.net/assets/public/4a03/708f/27fb4354980d/a5c35649494f/04387036250-e1/04387036250-e1.jpg?ts=1742222355574&w=1920" 
-                            alt="Producto 2">
+                            src="../../assets/img/products/drop1/2-1.webp" 
+                            alt="img 2-1">
                     </div>
                     <!-- Imágenes secundarias -->
                     <div class="img-product-2">
-                        <img class="zoomable" src="https://static.zara.net/assets/public/985a/5142/c5774501a932/e4b49dd00ee5/04387036250-e2/04387036250-e2.jpg?ts=1742222355440&w=1920" alt="">
-                        <img class="zoomable" src="https://static.zara.net/assets/public/f754/f44c/ad374ace9c6b/5e72cbf4639a/04387036250-e3/04387036250-e3.jpg?ts=1742222355870&w=1920" alt="">
+                        <img class="zoomable" src="../../assets/img/products/drop1/2-2.webp" alt="img 2-2">
+                        <img class="zoomable" src="../../assets/img/products/drop1/2-3.webp" alt="img 2-3">
                     </div>
                 </div>
                 <!-- Info -->
                 <div class="info-product">
-                    <p><strong>CAMISA BÁSICA POPELÍN</strong><br>LARGO: 60 ANCHO 49<br>250 Bs</p>
-                    <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'CAMISA%20BÁSICA%20POPELÍN'.%0A-250%20Bs." target="_blank">COMPRAR</a>
+                    <p><strong>Polera Vintage - POLHAM</strong><br>TALLE: S<br>100 Bs</p>
+                    <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20comprar%20la%20%C2%B4*Polera%20Vintage%20-%20POLHAM*%C2%B4.%0A*Talle%3A%20S*%0A*Precio%3A%20100%20Bs*%0A*Imagen%3A%20https%3A%2F%2Fraw.githubusercontent.com%2Fleopilots%2Frevibe%2Frefs%2Fheads%2Fmain%2Fassets%2Fimg%2Fproducts%2Fdrop1%2F2-1.webp*" target="_blank">COMPRAR</a>
                 </div>
             </div>
         </section>
@@ -124,9 +124,9 @@
             <p>&copy; 2025 ReVibe<sup>™</sup>. Todos los derechos reservados.</p>
         </div>
         <div class="social-media">
-            <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Quisiera%20saber%20más%20sobre%20ReVibe%20Cochabamba.%20(https://revibe.bolivia.bo/)" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://instagram.com/revibe" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://tiktok.com/revibe" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://wa.me/59160786758" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/revibebolivia" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@revibebolivia" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
         </div>
     </footer>
     <!-- js -->
