--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <nav class="nav-main">
             <ul class="nav-menu">
                 <li><a href="./">Hogar</a></li>
-                <li><a href="pages/man/">Hombres</a></li>
-                <li><a href="pages/woman/">Mujeres</a></li>
+                <li><a href="pages/clothing/">Prendas</a></li>
                 <li><a href="pages/accessories/">Accesorios</a></li>
                 <li><a href="pages/news/">Novedades</a></li>
             </ul>
@@ -61,17 +60,17 @@
                 <div class="producto">
                     <div class="imagenes">
                         <div class="imagen-principal">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/9a94/5ef4/d7754d05b92d/97726d9d076d/08062410407-e1/08062410407-e1.jpg?ts=1739376677575&w=1920" alt="Producto 1">
+                            <img class="zoomable" src="assets/img/products/drop1/1-1.webp" alt="Destacado 1 - img1">
                         </div>
                             <div class="imagenes-secundarias">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/8b4f/58b2/a84d40258a85/4904435f97cd/08062410407-e2/08062410407-e2.jpg?ts=1739376680669&w=1920" alt="">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/c20e/8694/afa9436085d7/2714d72c2017/08062410407-e3/08062410407-e3.jpg?ts=1739376681644&w=1920" alt="">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/0b04/ed01/a9fa4c5a8404/7715f60f8dc1/08062410407-e4/08062410407-e4.jpg?ts=1739376681072&w=1920" alt="">
+                            <img class="zoomable" src="assets/img/products/drop1/1-2.webp" alt="Destacado 1 - img2">
+                            <img class="zoomable" src="assets/img/products/drop1/1-3.webp" alt="Destacado 1 - img3">
+                            <img class="zoomable" src="assets/img/products/drop1/1-4.webp" alt="Destacado 1 - img4">
                         </div>
                     </div>
                     <div class="info-producto">
-                        <p><strong>JEANS BAGGY FIT</strong><br>LARGO: 102 ANCHO: 50<br>120 Bs</p>
-                        <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20los%20'JEANS%20BAGGY%20FIT'.%0A-LARGO:%20102.%0A-ANCHO:%2050.%0A-120%20bs." target="_blank">COMPRAR</a>
+                        <p><strong>Polera Vintage Moanalua - Port & Company</strong><br>TALLE: M<br>100 Bs</p>
+                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20comprar%20la%20%C2%B4*Polera%20Vintage%20Moanalua%20-%20Port%20%26%20Company*%C2%B4.%0A*Talle%3A%20M*%0A*Precio%3A%20120%20Bs*%0A*Imagen%3A%20https%3A%2F%2Fraw.githubusercontent.com%2Fleopilots%2Frevibe%2Frefs%2Fheads%2Fmain%2Fassets%2Fimg%2Fproducts%2Fdrop1%2F1-1.webp*" target="_blank">COMPRAR</a>
                     </div>
                 </div>
 
@@ -79,48 +78,16 @@
                 <div class="producto">
                     <div class="imagenes">
                         <div class="imagen-principal">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/3f7f/a3fe/59f44d7790d8/b5c83a07c0c6/06224330300-e1/06224330300-e1.jpg?ts=1753360048796&w=1920" alt="Producto 2">
+                            <img class="zoomable" src="assets/img/products/drop1/2-1.webp" alt="Destacado 2 - img1">
                         </div>
                         <div class="imagenes-secundarias">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/554e/7268/a7c048f1ba8f/f4bb57798c2d/06224330300-e2/06224330300-e2.jpg?ts=1753360048782&w=1920" alt="">
+                            <img class="zoomable" src="assets/img/products/drop1/2-2.webp" alt="Destacado 2 - img2">
+                            <img class="zoomable" src="assets/img/products/drop1/2-3.webp" alt="Destacado 2 - img3">
                         </div>
                     </div>
                     <div class="info-producto">
-                        <p><strong>REMERA COMBINADO TEXTOS</strong><br>LARGO: 60 ANCHO 49<br>250 Bs</p>
-                        <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20las%20'REMERA%20COMBINADO%20TEXTOS'.%0A-LARGO:%2060.%0A-ANCHO:%2049.%0A-250%20bs." target="_blank">COMPRAR</a>
-                    </div>
-                </div>
-
-                <!-- Producto 3 -->
-                <div class="producto">
-                    <div class="imagenes">
-                        <div class="imagen-principal">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/2dea/0624/7c51440db7f6/6dedd85c528a/00399310500-e1/00399310500-e1.jpg?ts=1752492565237&w=1920" alt="Producto 3">
-                        </div>
-                        <div class="imagenes-secundarias">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/657e/3d54/7d7b4bbd9f27/26e239238993/00399310500-e2/00399310500-e2.jpg?ts=1752492565893&w=1920" alt="">
-                        </div>
-                    </div>
-                    <div class="info-producto">
-                        <p><strong>SOBRECAMISA ESTRUCTURA BORDADO</strong><br>LARGO: 63 ANCHO 45<br>150 Bs</p>
-                        <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'SOBRECAMISA%20ESTRUCTURA%20BORDADO'.%0A-LARGO:%2063.%0A-ANCHO:%2045.%0A-150%20bs." target="_blank">COMPRAR</a>
-                    </div>
-                </div>
-
-                <!-- Producto 4 -->
-                <div class="producto">
-                    <div class="imagenes">
-                        <div class="imagen-principal">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/0b13/db56/ac4d4a2fabce/390931af291b/05388410800-e1/05388410800-e1.jpg?ts=1747994514568&w=1920" alt="Producto 4">
-                        </div>
-                        <div class="imagenes-secundarias">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/6134/3194/531148eba62f/6150b7337bb4/05388410800-e2/05388410800-e2.jpg?ts=1747994514160&w=1920" alt="">
-                            <img class="zoomable" src="https://static.zara.net/assets/public/aa8e/11b5/f7d1407a9b22/6985d3a05c56/05388410800-e3/05388410800-e3.jpg?ts=1747994514539&w=1920" alt="">
-                        </div>
-                    </div>
-                    <div class="info-producto">
-                        <p><strong>CAZADORA PIEL BOBBY</strong><br>LARGO: 70 ANCHO 62<br>350 Bs</p>
-                        <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'CAZADORA%20PIEL%20BOBBY'.%0A-LARGO:%2070.%0A-ANCHO:%2062.%0A-350%20bs." target="_blank">COMPRAR</a>
+                        <p><strong>Polera Vintage - POLHAM</strong><br>TALLE: S<br>100 Bs</p>
+                        <a href="https://wa.me/59160786758?text=Hola%2C%20buenas.%20Me%20interesa%20comprar%20la%20%C2%B4*Polera%20Vintage%20-%20POLHAM*%C2%B4.%0A*Talle%3A%20S*%0A*Precio%3A%20100%20Bs*%0A*Imagen%3A%20https%3A%2F%2Fraw.githubusercontent.com%2Fleopilots%2Frevibe%2Frefs%2Fheads%2Fmain%2Fassets%2Fimg%2Fproducts%2Fdrop1%2F2-1.webp*" target="_blank">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -136,9 +103,9 @@
             <p>&copy; 2025 ReVibe<sup>™</sup>. Todos los derechos reservados.</p>
         </div>
         <div class="social-media">
-            <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Quisiera%20saber%20más%20sobre%20ReVibe%20Cochabamba.%20(https://revibe.bolivia.bo/)" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://instagram.com/revibe" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://tiktok.com/revibe" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://wa.me/59160786758" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/revibebolivia" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@revibebolivia" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
         </div>
     </footer>
     <!-- js -->
