--- a/pages/accessories/index.html
+++ b/pages/accessories/index.html
@@ -39,8 +39,7 @@
         <nav class="nav-main">
             <ul class="nav-menu">
                 <li><a href="../../">Hogar</a></li>
-                <li><a href="../man/">Hombres</a></li>
-                <li><a href="../woman/">Mujeres</a></li>
+                <li><a href="../clothing/">Prendas</a></li>
                 <li><a href="../accessories/">Accesorios</a></li>
                 <li><a href="../news/">Novedades</a></li>
             </ul>
@@ -69,20 +68,19 @@
 
         <!-- Productos -->
         <section class="container-products">
+            <h2>Sin accesorios disponibles...</h2>
+            <!--
             <div class="product" data-categoria="joyas">
                 <div class="images-container">
-                    <!-- Imagen principal -->
                     <div class="img-product">
                         <img class="zoomable" 
                             src="https://static.zara.net/assets/public/68ec/8180/2c904a94a32b/01993664aeb4/04736245303-e1/04736245303-e1.jpg?ts=1753262493403&w=1920" 
                             alt="Producto 1">
                     </div>
-                    <!-- Imágenes secundarias -->
                     <div class="img-product-2">
                         <img class="zoomable" src="https://static.zara.net/assets/public/9054/6ee8/e4d24d2f8a72/9a510d48c2aa/04736245303-e2/04736245303-e2.jpg?ts=1753262493965&w=1920" alt="">
                     </div>
                 </div>
-                <!-- Info -->
                 <div class="info-product">
                     <p><strong>PACK 2 COLLARES PALMERA FLORES RESINA</strong><br>80 Bs</p>
                     <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20el%20'PACK%202%20COLLARES%20PALMERA%20FLORES%20RESINA'.%0A-80%20Bs." target="_blank">COMPRAR</a>
@@ -91,25 +89,23 @@
 
             <div class="product" data-categoria="gorras">
                 <div class="images-container">
-                    <!-- Imagen principal -->
                     <div class="img-product">
                         <img class="zoomable" 
                             src="https://static.zara.net/assets/public/0b88/94e0/d6b34cd09832/e45f27b6fee2/03920694725-e1/03920694725-e1.jpg?ts=1753359939386&w=1920" 
                             alt="Producto 2">
                     </div>
-                    <!-- Imágenes secundarias -->
                     <div class="img-product-2">
                         <img class="zoomable" src="https://static.zara.net/assets/public/0cd5/bb01/2ed34e51a31c/279ddd71ffd3/03920694725-e2/03920694725-e2.jpg?ts=1753359939415&w=1920" alt="">
                         <img class="zoomable" src="https://static.zara.net/assets/public/ff3a/5388/690d45bc905f/ea9881d8cffb/03920694725-e3/03920694725-e3.jpg?ts=1753359939755&w=1920" alt="">
                         <img class="zoomable" src="https://static.zara.net/assets/public/b2be/dc35/b467459d816e/986b054bc0e2/03920694725-e4/03920694725-e4.jpg?ts=1753359941707&w=1920" alt="">
                     </div>
                 </div>
-                <!-- Info -->
                 <div class="info-product">
                     <p><strong>GORRA VISOR PLANO BORDADO</strong><br>70 Bs</p>
                     <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Me%20interesa%20comprar%20la%20'GORRA%20VISOR%20PLANO%20BORDADO'.%0A-70%20Bs." target="_blank">COMPRAR</a>
                 </div>
             </div>
+            -->
         </section>
 
         <!-- Contenedor para ampliar imagen -->
@@ -123,9 +119,9 @@
             <p>&copy; 2025 ReVibe<sup>™</sup>. Todos los derechos reservados.</p>
         </div>
         <div class="social-media">
-            <a href="https://wa.me/59177914607?text=Hola,%20buenas.%20Quisiera%20saber%20más%20sobre%20ReVibe%20Cochabamba.%20(https://revibe.bolivia.bo/)" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://instagram.com/revibe" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://tiktok.com/revibe" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://wa.me/59160786758" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/revibebolivia" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@revibebolivia" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
         </div>
     </footer>
     <!-- js -->
